--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokedle</title>
+    <link rel="stylesheet" href="stylePokedle.css">
 </head>
 <body>
-    <div>
-        <p style="font-size: xxx-large; margin: 0; border: 0; text-indent: 900px;" id="score">0-0</p>
-        <canvas id="canvas" style="border: black 1px solid;"></canvas>
+    <input id="currentGuess" style="width: 300px; height: 40px; padding: 0%; margin: 0%;border: 0%; margin-right: 10px; font-size: x-large; text-align: center; box-sizing: border-box;">
+    <input type="button" onclick="checkAnswers()" value="Guess" style="width: 150px; height: 40px; font-size: x-large;padding: 0%; margin: 0%;border: 0%;margin-right: 10px;">
+    <input type="button" onclick="randomPokedex()" value="Random" style="width: 150px; height: 40px; font-size: x-large;padding: 0%; margin: 0%;border: 0%;"><br><br><br><br>
+    <div id="categories" class="guess-row" style="text-align: center; font-size: xx-large;">
+        <a><b>Pokemon</b></a>
+        <a><b>Type 1</b></a>
+        <a><b>Type 2</b></a>
+        <a><b>Ability</b></a>
+        <a><b>Color</b></a>
+        <a><b>Evolution stage</b></a>
+        <a><b>Fully evolved</b></a>
+        <a><b>Generation</b></a>
     </div>
-    
-    <script src="pingpong.js"></script>
+    <div id="guesses"></div>
+    <script src="pokedex.js"></script>
+    <script src="scriptPokedle.js"></script>
 </body>
 </html>
+<!--  type="module" -->
