--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <input id="currentGuess" style="width: 300px; height: 40px; padding: 0%; margin: 0%;border: 0%; margin-right: 10px; font-size: x-large; text-align: center; box-sizing: border-box;">
     <input type="button" onclick="checkAnswers()" value="Guess" style="width: 150px; height: 40px; font-size: x-large;padding: 0%; margin: 0%;border: 0%;margin-right: 10px;">
     <input type="button" onclick="randomPokedex()" value="Random" style="width: 150px; height: 40px; font-size: x-large;padding: 0%; margin: 0%;border: 0%;">
-    <input type="button" value="gen1" id="gen1" onclick="pokedexEnabler(1)">
-    <input type="button" value="gen2" id="gen2" onclick="pokedexEnabler(2)">
-    <input type="button" value="gen3" id="gen3" onclick="pokedexEnabler(3)">
-    <input type="button" value="gen4" id="gen4" onclick="pokedexEnabler(4)">
-    <input type="button" value="gen5" id="gen5" onclick="pokedexEnabler(5)">
-    <input type="button" value="gen6" id="gen6" onclick="pokedexEnabler(6)">
-    <input type="button" value="gen7" id="gen7" onclick="pokedexEnabler(7)">
-    <input type="button" value="gen8" id="gen8" onclick="pokedexEnabler(8)">
-    <input type="button" value="gen9" id="gen9" onclick="pokedexEnabler(9)">
+    <input type="button" value="gen1" id="gen1" onclick="getFinalPokedex(1);randomPokedex()">
+    <input type="button" value="gen2" id="gen2" onclick="getFinalPokedex(2);randomPokedex()">
+    <input type="button" value="gen3" id="gen3" onclick="getFinalPokedex(3);randomPokedex()">
+    <input type="button" value="gen4" id="gen4" onclick="getFinalPokedex(4);randomPokedex()">
+    <input type="button" value="gen5" id="gen5" onclick="getFinalPokedex(5);randomPokedex()">
+    <input type="button" value="gen6" id="gen6" onclick="getFinalPokedex(6);randomPokedex()">
+    <input type="button" value="gen7" id="gen7" onclick="getFinalPokedex(7);randomPokedex()">
+    <input type="button" value="gen8" id="gen8" onclick="getFinalPokedex(8);randomPokedex()">
+    <input type="button" value="gen9" id="gen9" onclick="getFinalPokedex(9);randomPokedex()">
     <br><br><br><br>
     <div id="categories" class="guess-row" style="text-align: center; font-size: xx-large;">
         <a><b>Pokemon</b></a>
